--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Audio player -->
-    <audio id="audio-player" src="" controls></audio>
+    <audio id="audio-player" src=""></audio>
 
     <script src="script.js?v=1.1.4"></script>
 </body>
