--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>osu!FM</title>
-    <link rel="stylesheet" href="/style.css?v=1.0.5">
+    <link rel="stylesheet" href="/style.css?v=1.0.6">
 </head>
 <body>
     <!-- Warning message -->
@@ -17,27 +17,20 @@
         <h1 id="song-title">Loading...</h1>
         <h2 id="song-artist"></h2>
 
-        <!-- Audio bar container -->
-        <div class="audio-bar">
-            <!-- Play/Pause button -->
-            <button class="play-pause-btn" id="playPauseBtn">Play</button>
+        <!-- Audio player removed controls -->
+        <audio id="audio-player" src=""></audio>
 
-            <!-- Progress bar -->
-            <input id="seek-bar" type="range" min="0" max="100" value="0" step="0.1">
+        <!-- Custom Seekbar placed above the Next Song button -->
+        <input id="seek-bar" type="range" min="0" max="100" value="0" step="0.1">
 
-            <!-- Track information -->
-            <div class="track-info">
-                <span id="track-info"></span>
-            </div>
-        </div>
+        <!-- Play/Pause Button (if needed) -->
+        <button id="playPauseBtn">Play</button>
 
         <br>
+        <!-- Next Song Button below the Seekbar -->
         <button onclick="loadRandomSong()">Next Song</button>
     </div>
 
-    <!-- Audio player -->
-    <audio id="audio-player" src=""></audio>
-
-    <script src="script.js?v=1.1.4"></script>
+    <script src="script.js?v=1.1.5"></script>
 </body>
 </html>
