--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2 id="song-artist"></h2>
     
         <!-- Audio player removed controls -->
-        <audio id="audio-player" src=""></audio>
+        <audio id="audio-player" src="" onloadedmetadata="onMetadataLoaded()"></audio>
     
         <!-- Custom Seekbar placed above the Next Song button -->
         <input id="seek-bar" type="range" min="0" max="100" value="0" step="0.1">
@@ -34,6 +34,6 @@
         <button onclick="loadRandomSong()">Next Song</button>
     </div>
 
-    <script src="script.js?v=1.1.8"></script>
+    <script src="script.js?v=1.1.9"></script>
 </body>
 </html>
