Trying to add a popup menu to the prototype warning that explains my current plans with the website

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>osu!FM</title>
-    <link rel="stylesheet" href="/style.css?v=1.1.4">
+    <link rel="stylesheet" href="/style.css?v=1.1.5">
 </head>
 <body>
     <!-- Warning message -->
     <div class="warning">
         This is a prototype. I'm working on it!
+        <div class="popup-menu">
+            <ul>
+                <li>Feature 1: Adding song search</li>
+                <li>Feature 2: Shuffle play option</li>
+                <li>Feature 3: Custom playlists</li>
+            </ul>
+        </div>
     </div>
 
     <div class="overlay"></div>
