Added popup menu where I can informa about my plans with this project

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         This is a prototype. I'm working on it!
         <div class="popup-menu">
             <ul>
-                <li>Feature 1: Adding song search</li>
-                <li>Feature 2: Shuffle play option</li>
-                <li>Feature 3: Custom playlists</li>
+                <li>Hi! Here you can find my current plans and future plans with this project of mine.</li>
+                <li>Current plans are to make sure my backend and frontends are solid enough before adding a bunch of features.</li>
+                <li>Future plans would be to have both online and local access, meaning you could either connect to the songs folder I provide which I plan on having all osu standard ranked and loved maps on or a local osu folder that has songs that you enjoy!</li>
+                <li>I also plan on revamping the entire ui since this is a very barebones design I created to get a rough idea of what I'm shooting for.</li>
+                <li>I will try to keep updates on where things are in here!</li>
             </ul>
         </div>
     </div>
