Changed CSS again for popup menu issues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <!-- Warning message -->
     <div class="warning">
-        This is a prototype. I'm working on it!
+        <input type="checkbox" id="popup-toggle">
+        <label for="popup-toggle">This is a prototype. I'm working on it!</label>
         <div class="popup-menu">
             <ul>
                 <li>Hi! Here you can find my current plans and future plans with this project of mine.</li>
