--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>osu!FM</title>
-    <link rel="stylesheet" href="/style.css?v=1.2.0">
+    <link rel="stylesheet" href="/style.css?v=1.2.1">
 </head>
 <body>
     <!-- Warning message -->
@@ -38,8 +38,13 @@
     
         <!-- Play/Pause Button (if needed) -->
         <button id="playPauseBtn">Play</button>
+
+         <!-- Volume Control Bar -->
+         <div class="volume-container">
+            <label for="volume-bar">Volume</label>
+            <input id="volume-bar" type="range" min="0" max="1" value="1" step="0.01">
+        </div>
     
-        <br>
         <!-- Next Song Button below the Seekbar -->
         <button onclick="loadRandomSong()">Next Song</button>
     </div>
