--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     
         <!-- Next Song Button below the Seekbar -->
         <button onclick="loadRandomSong()">Next Song</button>
+
+        <button id="select-folder-button">Select osu! Song Folder</button>
+        <div id="song-info"></div>
+
     </div>
 
     <script src="script.js?v=1.2.6"></script>
