Added a open beatmap button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     
         <!-- Next Song Button below the Seekbar -->
         <button onclick="loadRandomSong()">Next Song</button>
+
+        <a id="beatmap-link" href="#" target="_blank">
+            <button>Open Beatmap</button>
+        </a>
     </div>
 
     <script src="script.js?v=1.2.8"></script>
