Added a double/nomod button

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <a id="beatmap-link" href="#" target="_blank">
             <button>Open Beatmap</button>
         </a>
+
+        <button id="speed-toggle" onclick="togglePlaybackRate()">Double Time</button>
     </div>
 
-    <script src="script.js?v=1.2.9"></script>
+    <script src="script.js?v=1.3.0"></script>
 </body>
 </html>
